--- a/application-mycloudmanager-v3/stack-fr2.yml
+++ b/application-mycloudmanager-v3/stack-fr2.yml
@@ -61,7 +61,7 @@ parameters:
     type: string
 
   peer:
-    default: 10.2.1.10
+    default: 10.2.1.10 10.2.1.11 10.2.1.12
     label: Peer
     type: string
 
