--- a/application-mycloudmanager-v3/kube-storage.heat.yaml
+++ b/application-mycloudmanager-v3/kube-storage.heat.yaml
@@ -1,6 +1,12 @@
 heat_template_version: 2013-05-23
 
 parameters:
+  vpn_username:
+    label: vpn_username
+    type: string
+  vpn_password:
+    label: vpn_password
+    type: string
   token:
     label: token
     type: string
@@ -9,6 +15,18 @@ parameters:
     type: string
   floating_network:
     label: floating_network
+    type: string
+  os_username:
+    label: os_username
+    type: string
+  os_password:
+    label: os_password
+    type: string
+  os_tenant_name:
+    label: os_tenant
+    type: string
+  os_auth_url:
+    label: os_auth
     type: string
   os_region:
     label: os_region
@@ -40,28 +58,6 @@ parameters:
     label: Instance Type (Flavor)
     description: Flavor to use for the deployed instance
     type: string
-  os_tenant:
-    description: cloudwatt tenant name
-    label: tenant_name
-    type: string
-  os_username:
-    description: cloudwatt username name
-    label: os_username
-    type: string
-  os_password:
-    description: cloudwatt password
-    label: os_password
-    type: string
-  os_auth:
-    description: URL Auth
-    label: os_auth
-    type: string
-  vpn_username:
-    label: vpn_username
-    type: string
-  vpn_password:
-    label: vpn_password
-    type: string
 
 resources:
   port:
@@ -77,7 +73,7 @@ resources:
     type: OS::Nova::Server
     properties:
       key_name: { get_param: keypair_name }
-      image: CoreOS Stable 1010.6
+      image: Coreos-1185.3
       flavor: { get_param: flavor_name }
       user_data_format: RAW
       networks:
@@ -88,28 +84,20 @@ resources:
             $private_ipv4$: { get_attr: [ port, fixed_ips, 0, ip_address ] }
             $public_ipv4$: { get_attr: [ floating_ip, floating_ip_address] }
             $domain$: { get_param: domain }
+            $os_username$: { get_param: os_username }
+            $os_password$: { get_param: os_password }
+            $os_auth_url$: { get_param: os_auth_url }
+            $os_tenant_name$: { get_param: os_tenant_name }
             $os_region$: { get_param: os_region }
             $ceph$: { get_param: ceph }
             $token$: { get_param: token }
             $peer$: { get_param: peer }
             $monitoring$: { get_param: monitoring }
-            $os_username$: { get_param: os_username }
-            $os_tenant$: { get_param: os_tenant }
-            $os_password$: { get_param: os_password }
-            $os_auth$: { get_param: os_auth }
-            $vpn_username$: { get_param: vpn_username }
-            $vpn_password$: { get_param: vpn_password }
+            $vpn_username: { get_param: vpn_username }
+            $vpn_password: { get_param: vpn_password }
           template: |
             #cloud-config
             write_files:
-              - path: /etc/openstack.env
-                permission: 0700
-                owner: "root:root"
-                content: |
-                  OS_USERNAME=$os_username$
-                  OS_PASSWORD=$os_password$
-                  OS_AUTH_URL=$os_auth$
-                  OS_TENANT_NAME=$os_tenant$
               - path: /opt/weave-init.sh
                 permissions: 0700
                 owner: "root:root"
@@ -125,6 +113,15 @@ resources:
                   #!/bin/bash
                   NODE_NAME=$(hostname |cut -d '.' -f 1)
                   NODE_FQDN=$(hostname)
+                  cat <<EOF > /etc/pidalio.etcd.rclone.conf
+                  [remote]
+                  type = swift
+                  user = $os_username$
+                  key = "$os_password$"
+                  auth = $os_auth_url$
+                  tenant = $os_tenant_name$
+                  region = $os_region$
+                  EOF
                   cat <<EOF > /etc/pidalio.env
                   NODE_NAME=$NODE_NAME
                   NODE_FQDN=$NODE_FQDN
@@ -133,6 +130,8 @@ resources:
                   NODE_TYPE=$os_region$
                   NODE_STORAGE=true
                   CEPH=$ceph$
+                  CEPH_DISK=True
+                  CEPH_DISK_DEVICE=/dev/vdb
                   MONITORING=$monitoring$
                   ETCD_NODES=3
                   PEER="$peer$"
@@ -163,7 +162,7 @@ resources:
                     do
                       /opt/bin/weave rmpeer $peer
                     done
-                    /usr/bin/docker rm $(/usr/bin/docker ps -q -a -f status=exited)
+                    /usr/bin/docker rm pidalio pidalio-apiserver 2> /dev/null
                     sleep 60
                   done
             coreos:
@@ -174,6 +173,23 @@ resources:
                   metadata: "region=$os_region$"
                   etcd_servers: "http://localhost:2379"
               units:
+                - name: 50-docker.network
+                  mask: true
+                - name: 50-docker-veth.network
+                  mask: true
+                - name: zz-default.network
+                  runtime: false
+                  content: |
+                    # default should not match virtual Docker/weave bridge/veth network interfaces
+                    [Match]
+                    Name=eth*
+
+                    [Network]
+                    DHCP=yes
+
+                    [DHCP]
+                    UseMTU=true
+                    UseDomains=true
                 - name: etcd2.service
                   command: start
                   content: |
@@ -182,7 +198,6 @@ resources:
                     After=weave-network.target
                     Requires=weave-network.target
                     Conflicts=etcd.service
-
                     [Service]
                     EnvironmentFile=-/etc/weave.env
                     ExecStartPre=/opt/bin/weave expose
@@ -192,7 +207,6 @@ resources:
                     RestartSec=10s
                     LimitNOFILE=40000
                     TimeoutStartSec=5m
-
                     [Install]
                     WantedBy=multi-user.target
                 - name: fleet.service
@@ -338,8 +352,8 @@ resources:
                         --name pptp \
                         --privileged \
                         --net=host \
-                        --env 'USERNAME=$vpn_username$' \
-                        --env 'PASSWORD=$vpn_password$' \
+                        --env 'USERNAME=$vpn_username' \
+                        --env 'PASSWORD=$vpn_password' \
                         cedbossneo/pptp \
                     "
                     ExecStop=/usr/bin/docker stop pptp
