--- a/application-mycloudmanager-v3/stack-fr2-web.yml
+++ b/application-mycloudmanager-v3/stack-fr2-web.yml
@@ -32,7 +32,7 @@ parameters:
     type: string
 
   flavor:
-    default: s1.cw.small-1
+    default: n2.cw.standard-2
     description: Flavor to use for the deployed instances
     type: string
     label: Instance Type (Flavor)
@@ -40,7 +40,7 @@ parameters:
       - allowed_values:
           - s1.cw.small-1
           - n1.cw.standard-1
-          - n2.cw.standard-1
+          - n2.cw.standard-2
           - n1.cw.standard-2
           - n1.cw.standard-4
           - n1.cw.standard-8
@@ -53,7 +53,15 @@ parameters:
     description: Node counts
     type: number
     constraints:
-      - range: { min: 1, max: 10 }
+      - range: { min: 1, max: 50 }
+
+  storage_count:
+    default: 2
+    label: Storage Count
+    description: Storage counts
+    type: number
+    constraints:
+      - range: { min: 1, max: 5 }
 
   token:
     default: averylongpassphraseatleast16chars
@@ -65,7 +73,39 @@ parameters:
     label: Peer
     type: string
 
+  os_username:
+    description: OpenStack Username
+    label: OpenStack Username
+    type: string
+
+  os_password:
+    description: OpenStack Password
+    label: OpenStack Password
+    type: string
+    hidden: true
+
+  os_tenant_name:
+    description: OpenStack Tenant Name
+    label: OpenStack Tenant Name
+    type: string
+
+  os_auth_url:
+    description: OpenStack Auth URL
+    default: https://identity.fr1.cloudwatt.com/v2.0
+    label: OpenStack Auth URL
+    type: string
+
 resources:
+  vpn_username:
+    type: OS::Heat::RandomString
+    properties:
+      length: 10
+
+  vpn_password:
+    type: OS::Heat::RandomString
+    properties:
+      length: 10
+
   network:
     type: OS::Neutron::Net
 
@@ -109,6 +149,8 @@ resources:
       resource:
         type: http://storage.fr1.cloudwatt.net:8080/v1/AUTH_67776479fd524682899ed9931dd1a742/kube-ha/kube-node.heat.yaml
         properties:
+          vpn_username: { get_resource: vpn_username }
+          vpn_password: { get_resource: vpn_password }
           token: { get_param: token }
           peer: { get_param: peer }
           domain: { get_param: domain }
@@ -116,11 +158,43 @@ resources:
           network: { get_resource: network }
           keypair_name: { get_param: keypair_name }
           flavor_name: { get_param: flavor }
+          os_username: { get_param: os_username }
+          os_password: { get_param: os_password }
+          os_tenant_name: { get_param: os_tenant_name }
+          os_auth_url: { get_param: os_auth_url }
           os_region: fr2
           ceph: { get_param: ceph }
           monitoring: { get_param: monitoring }
           subnet: { get_resource: subnet }
           floating_network: b5dd7532-1533-4b9c-8bf9-e66631a9be1d
+
+  storages:
+    type: OS::Heat::AutoScalingGroup
+    properties:
+      min_size: { get_param: storage_count }
+      max_size: 5
+      resource:
+        type: http://storage.fr1.cloudwatt.net:8080/v1/AUTH_772be1ffb32e42a28ac8e0205c0b0b90/toolbox-v3/kube-storage.heat.yaml
+        properties:
+          vpn_username: { get_resource: vpn_username }
+          vpn_password: { get_resource: vpn_password }
+          token: { get_param: token }
+          peer: { get_param: peer }
+          domain: { get_param: domain }
+          security_group: { get_resource: security_group }
+          network: { get_resource: network }
+          keypair_name: { get_param: keypair_name }
+          flavor_name: { get_param: flavor }
+          os_username: { get_param: os_username }
+          os_password: { get_param: os_password }
+          os_tenant_name: { get_param: os_tenant_name }
+          os_auth_url: { get_param: os_auth_url }
+          os_region: fr2
+          ceph: { get_param: ceph }
+          monitoring: { get_param: monitoring }
+          subnet: { get_resource: subnet }
+          floating_network: b5dd7532-1533-4b9c-8bf9-e66631a9be1d
+
   scaleup_policy:
     type: OS::Heat::ScalingPolicy
     properties:
@@ -133,6 +207,20 @@ resources:
       adjustment_type: change_in_capacity
       auto_scaling_group_id: {get_resource: nodes}
       scaling_adjustment: -1
+
+  scaleup_storage_policy:
+    type: OS::Heat::ScalingPolicy
+    properties:
+       adjustment_type: change_in_capacity
+       auto_scaling_group_id: {get_resource: storages}
+       scaling_adjustment: 1
+  scaledown_storage_policy:
+    type: OS::Heat::ScalingPolicy
+    properties:
+      adjustment_type: change_in_capacity
+      auto_scaling_group_id: {get_resource: storages}
+      scaling_adjustment: -1
+
 outputs:
   scale_up_url:
     description: >
@@ -142,3 +230,17 @@ outputs:
     description: >
       his URL is the webhook to scale down the autoscaling group. You can invoke the scale-down operation by doing an HTTP POST to this URL; no body nor extra headers are needed.
     value: {get_attr: [scaledown_policy, alarm_url]}
+  scale_up_storage_url:
+    description: >
+      This URL is the webhook to scale up the autoscaling group. You can invoke the scale-up operation by doing an HTTP POST to this URL; no body nor extra headers are needed.
+    value: {get_attr: [scaleup_storage_policy, alarm_url]}
+  scale_dn_storage_url:
+    description: >
+      his URL is the webhook to scale down the autoscaling group. You can invoke the scale-down operation by doing an HTTP POST to this URL; no body nor extra headers are needed.
+    value: {get_attr: [scaledown_storage_policy, alarm_url]}
+  vpn_username:
+    description: VPN Username
+    value: { get_resource: vpn_username }
+  vpn_password:
+    description: VPN Password
+    value: { get_resource: vpn_password }
