--- a/application-mycloudmanager-v3/kube-node.heat.yaml
+++ b/application-mycloudmanager-v3/kube-node.heat.yaml
@@ -370,5 +370,5 @@ resources:
       floating_network_id: { get_param: floating_network }
 
 outputs:
-  public_ip:
+  public_ip_node:
     value: {get_attr: [floating_ip, floating_ip_address]}
