--- a/application-mycloudmanager-v3/kube-storage.heat.yaml
+++ b/application-mycloudmanager-v3/kube-storage.heat.yaml
@@ -383,5 +383,5 @@ resources:
       mountpoint: /dev/vdb
 
 outputs:
-  public_ip:
+  public_ip_storage:
     value: {get_attr: [floating_ip, floating_ip_address]}
