--- a/application-mycloudmanager-v3/kube-node.heat.yaml
+++ b/application-mycloudmanager-v3/kube-node.heat.yaml
@@ -73,7 +73,7 @@ resources:
     type: OS::Nova::Server
     properties:
       key_name: { get_param: keypair_name }
-      image: Coreos-1185.3
+      image: CoreOS Stable 1010.6
       flavor: { get_param: flavor_name }
       user_data_format: RAW
       networks:
