--- a/application-mycloudmanager-v3/kube-storage.heat.yaml
+++ b/application-mycloudmanager-v3/kube-storage.heat.yaml
@@ -172,6 +172,10 @@ resources:
                   metadata: "region=$os_region$"
                   etcd_servers: "http://localhost:2379"
               units:
+                - name: update-engine.service
+                  command: stop
+                - name: locksmithd.service
+                  command: stop
                 - name: 50-docker.network
                   mask: true
                 - name: 50-docker-veth.network
