--- a/application-mycloudmanager-v3/stack-fr1.yml
+++ b/application-mycloudmanager-v3/stack-fr1.yml
@@ -32,7 +32,7 @@ parameters:
     type: string
 
   flavor:
-    default: n1.cw.standard-2
+    default: n2.cw.standard-16
     description: Flavor to use for the deployed instances
     type: string
     label: Instance Type (Flavor)
@@ -42,6 +42,8 @@ parameters:
           - n1.cw.standard-4
           - n1.cw.standard-8
           - n1.cw.standard-16
+          - n2.cw.standard-2
+          - n2.cw.standard-16
   node_count:
     default: 3
     label: Node Count
